feat: add supports for !eq in dimension endpoint [DHIS2-13779]